tui/src/pager/snapshots/tui__pager__view__tests__view_empty.snap
---
source: tui/src/pager/view.rs
assertion_line: 95
expression: terminal.backend()
---
"                                        "
"                                        "
"                                        "
"                                        "
"(1/1)            /t/n/.t          h help"
