tui/src/pager/snapshots/tui__pager__view__tests__view_overflow_viewport.snap
---
source: tui/src/pager/view.rs
assertion_line: 95
expression: terminal.backend()
---
"a                                       "
"b                                       "
"c                                       "
"d                                       "
"(1/5)            /t/n/.t          h help"
