tui/src/pager/snapshots/tui__pager__view__tests__view_scroll.snap
---
source: tui/src/pager/view.rs
assertion_line: 136
expression: terminal.backend()
---
"line 6                                  "
"line 7                                  "
"line 8                                  "
"line 9                                  "
"line 10                                 "
"line 11                                 "
"line 12                                 "
"line 13                                 "
"line 14                                 "
"(6/12)           /t/n/.t          h help"
