tui/src/pager/snapshots/tui__pager__view__tests__view_single_line.snap
---
source: tui/src/pager/view.rs
assertion_line: 95
expression: terminal.backend()
---
"hello                                   "
"                                        "
"                                        "
"                                        "
"(1/1)            /t/n/.t          h help"
